# dlsu-lecture-slides

./: .bandit.yaml  .codespellignore  .eslintrc.js  .flake8  .gitignore  .pre-commit-config 2.yaml  .pre-commit-config.yaml  .prettierrc.js  Makefile  README.md  engine.js  live.html  live.md  mlp.html  mlp.md  package.json  present.md  pyproject.toml  setup-pre-commit.sh  webpack.config.js
mlp-visualizer/: package.json
presentation/: engine.js  formula-styles.css  hello.py  kroki-plugin.js  live.md  marp.config.js  math-formulas.js  math-styles.css  mermaid-plugin.js  mlp.html  mlp.ipynb  mlp.md  mlp_v2.html  mlp_v2.md  pyproject.toml
public/: index.html
src/: 404.html  index.html
src/css/: styles.css  visualizations.css
src/js/: dataGenerator.js  dataVisualizer.js  index.js  mlp.js  visualizer.js
